--- a/force-app/main/default/lwc/zAccountPage/zAccountPage.html
+++ b/force-app/main/default/lwc/zAccountPage/zAccountPage.html
@@ -72,8 +72,8 @@
                     </lightning-card>
                 </lightning-record-edit-form>
                 <div class="slds-m-top_medium modal-footer slds-modal__footer slds-size_1-of-1">
-                    <lightning-button variant="neutral" label="Cancel" onclick={cancelDialog}></lightning-button>                             
-                    <lightning-button variant="brand" type="submit" name="save" label="Save and Next" onclick={saveAcct}></lightning-button> 
+                    <lightning-button data-id="cancel" variant="neutral" label="Cancel" onclick={cancelDialog}></lightning-button>                             
+                    <lightning-button data-id="saveNext" variant="brand" type="submit" name="save" label="Save and Next" onclick={saveAcct}></lightning-button> 
                 </div> 
             </lightning-card>
         </lightning-card>
